# 0420

reservoir_qa/: .env  .env.example  6.2_基于控制运用计划的问数与问答场景演示.md  ALL_QA_RESULTS_PRESENTATION.md  ALL_REPORT.md  EVENT_TIMESERIES_SCHEMA.md  FINAL_FIX_REPORT.md  QA_RESULTS_PRESENTATION.md  README.md  REPORT.md  REPORT_QWEN_FIX.md  pyproject.toml  test_runs.json  答案约束.md  问数清单.md  问答问题(1).json
reservoir_qa/CSV(1)/CSV/: 2007081917.csv  2007100817.csv  2008072005.csv  2008073005.csv  2009080920.csv  2010052305.csv  2010062002.csv  2011041623.csv  2011061323.csv  2012022323.csv  2012030714.csv  2012041314.csv  2012051514.csv  2012062402.csv  2013051623.csv  2013060217.csv  2013061314.csv  2013072414.csv  2013082211.csv  2013083020.csv  2013100711.csv  2013121702.csv  2014052305.csv  2014062317.csv  2014062905.csv  2014072414.csv  2014081211.csv  2014082008.csv  2015070408.csv  2015080908.csv  2015093014.csv  2015122414.csv  2016041023.csv  2016050920.csv  2016061623.csv  2016091517.csv  2016092817.csv  2017061617.csv  2017070405.csv  2018053117.csv  (+26 more)
reservoir_qa/app/: __init__.py  main.py
reservoir_qa/app/agents/: __init__.py  answer_schema.py  common.py  local_structured_answer.py  rag_agent.py  router.py  structured_output.py  text_to_sql_agent.py
reservoir_qa/scripts/: run_all_mixed_eval.py  run_category_sample_eval.py  run_full_eval.py
reservoir_qa/sql/: 001_schema.sql  002_create_readonly_user.sql
reservoir_qa/tests/: test_answer_schema.py  test_local_structured_answer.py  test_router.py  test_runtime_init.py  test_sql_guard.py  test_tankeng_parser.py
(+33 files in other folders)
